# untitledgame

./: .gitignore  CMakeLists.txt  TODO.md  build.sh  compile.bat  run.sh
shaders/: shader.vert
src/: main.cpp
src/famework/common/: assert.hpp
src/framework/: core.hpp
src/framework/common/: constants.hpp  defines.hpp  logging.hpp  types.hpp
src/framework/platform/: filesystem.cpp  filesystem.hpp  window.cpp  window.hpp
src/framework/render/: vk_renderer.cpp  vk_renderer.hpp
